--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BRANCHES</title>
+    <title></title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi dignissimos placeat amet, debitis inventore mollitia sapiente quam neque ut voluptatum at minima dolores dolore. Dignissimos sunt modi dicta quod mollitia?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio illo numquam tenetur amet illum labore soluta a veritatis fugiat ullam voluptatum nesciunt alias velit, quisquam totam iure. Minus, animi culpa!</p>
         </article>
     </main>
 </body>
